fix: added new variable for main call btn and fixed z-index for this btn [WTEL-5554](https://webitel.atlassian.net/browse/WTEL-5554)

--- a/src/app/css/styleguide/_variables.scss
+++ b/src/app/css/styleguide/_variables.scss
@@ -5,4 +5,5 @@
   --ws-dropdown-z-index: calc(var(--popup-wrapper-z-index) - 1);
   --ws-video-action-z-index: 10;
   --ws-tooltip-z-index: 10;
+  --ws-main-call-button-z-index: 10;
 }
